fixed styling for dark mode extensions

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -56,7 +56,7 @@ nav a {
   padding: 0.75rem 1rem;
   text-decoration: none;
   color: var(--link);
-  border: 1px solid var(--bg);
+  border: 1px solid #0057b300;
 }
 
 nav button {
